--- a/page_analyzer/templates/show.html
+++ b/page_analyzer/templates/show.html
@@ -21,7 +21,7 @@
     </table>
   </div>
   <h2 class="mt-5 mb-3">Проверки</h2>
-  <form action="{{ url_for('check_url', id=ID) }}" method="post">
+  <form action="{{ url_for('check_url', id_=ID) }}" method="post">
     <input class="btn btn-primary" type="submit" value="Запустить проверку" />
   </form>
   <div>
