--- a/page_analyzer/templates/all_urls.html
+++ b/page_analyzer/templates/all_urls.html
@@ -17,8 +17,8 @@
           <tr>
             <td>{{ url.id }}</td>
             <td><a href="{{ url_for('one_url', id_=url.id) }}">{{ url.name }}</a></td>
-              {% if url.check_time %}
-                <td>{{ url.check_time }}</td>
+              {% if url.last_check %}
+                <td>{{ url.last_check }}</td>
                 <td>{{ url.status_code }}</td>
               {% else %}
                 <td></td>
